tests/invalid/bytearray_center_wrong_arg_count/main.py
def run_case() -> None:
    ba: bytearray = bytearray(b"ab")
    ba.center(4)


if __name__ == "__main__":
    run_case()
